force-app/main/default/objects/SM_Appointment_Status__c/fields/SM_Event_Object__c.field-meta.xml
<CustomField>
    <fullName>SM_Event_Object__c</fullName>
    <description>The Event object associated to this appointment status.</description>
    <label>Event Object</label>
    <length>22</length>
    <type>Text</type>
</CustomField>