force-app/main/default/objects/SM_Appointment_Status__c/fields/SM_Transition__c.field-meta.xml
<CustomField>
    <fullName>SM_Transition__c</fullName>
    <description>The status of the appointment.</description>
    <label>Transition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>