force-app/main/default/objects/SM_Appointment_Status__c/fields/SM_Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>SM_Transition_Date__c</fullName>
    <label>Transition Date</label>
    <type>DateTime</type>
</CustomField>